--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,219 @@
-.App {
+header {
   text-align: center;
+  background-color: rgb(255, 115, 0);
+  height: 50px;
+  border-bottom: 2px solid rgb(192, 192, 192);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Title {
+  color: white;
+  margin-right: 40px;
+  font-size: xx-large;
+  font-weight: bold;
+  margin-top: 13px;
+  display: inline-block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App_Body {
+  height: 100vh;
+  text-align: center;
+  background-color: rgb(246, 243, 233);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.BtnOpen {
+  margin-top: 80px;
+  margin-left: 75%;
+  width: 200px;
+  height: 40px;
+  border-radius: 15px;
+  color: rgb(255, 115, 0);
+  border-width: 1px;
+  border-color: rgb(255, 115, 0);
+  background-color: white;
+  font-weight: bold;
+}
+
+.BtnOpen:hover {
+  background-color: rgb(255, 115, 0);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.TableAdds {
+  width: 90%;
+  margin-top: 40px;
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  margin-left: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.TableTitle {
+  color: rgb(255, 115, 0);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.thTitle {
+  text-align: left;
+}
+
+.thLink {
+  text-align: left;
+  padding-left: 10px;
+}
+
+.RowTitle {
+  text-align: left;
+}
+
+.RowLink {
+  text-align: left;
+}
+
+td:first-child,
+th:first-child {
+  border-radius: 10px 0 0 10px;
+}
+td:last-child,
+th:last-child {
+  border-radius: 0 10px 10px 0;
+}
+
+.Row {
+  background-color: white;
+  margin-top: 50px;
+  height: 60px;
+}
+
+.Row:hover {
+  background: rgb(255, 115, 0);
+  background: linear-gradient(
+    90deg,
+    rgb(255, 115, 0) 16%,
+    rgba(255, 255, 255, 1) 97%
+  );
+  transform: scale(1.02);
+}
+
+/* Popup style */
+.PopupHeader {
+  color: rgb(255, 115, 0);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+}
+
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  width: 40%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background-color: rgb(246, 243, 233);
+  border-radius: 15px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+  text-align: right;
+}
+
+.close-icon {
+  content: "x";
+  cursor: pointer;
+  position: fixed;
+  right: calc(30% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
+}
+
+b {
+  margin-right: 35%;
+  color: #105faf;
+}
+
+.InputForm {
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 30%;
+}
+
+select {
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 46%;
+}
+
+.BtnEdit {
+  margin-top: 30px;
+  width: 200px;
+  height: 40px;
+  border-radius: 15px;
+  color: rgb(255, 115, 0);
+  border-width: 1px;
+  border-color: rgb(255, 115, 0);
+  background-color: white;
+  font-weight: bold;
+}
+
+.BtnEdit:hover {
+  background-color: rgb(255, 115, 0);
+  color: white;
+}
+
+.BtnDelete {
+  margin-top: 10px;
+  width: 200px;
+  height: 40px;
+  border-radius: 15px;
+  color: rgb(255, 0, 0);
+  border-width: 1px;
+  border-color: rgb(255, 0, 0);
+  background-color: white;
+  font-weight: bold;
+}
+.BtnDelete:hover {
+  background-color: rgb(246, 78, 70);
+  color: white;
+}
+
+.BtnAdd {
+  margin-top: 30px;
+  width: 200px;
+  height: 40px;
+  border-radius: 15px;
+  color: rgb(255, 115, 0);
+  border-width: 1px;
+  border-color: rgb(255, 115, 0);
+  background-color: white;
+  font-weight: bold;
+}
+
+.BtnAdd:hover {
+  background-color: rgb(255, 115, 0);
+  color: white;
+}
+
+.labelForm {
+  font-weight: bold;
+  color: rgb(255, 115, 0);
+}
+
+.InputForm {
+  height: 25px;
+  border-radius: 5px;
+  width: 200px;
 }
